Fixed circle of fifths not appearing in dark mode

--- a/src/components/PieChart/PieChart.scss
+++ b/src/components/PieChart/PieChart.scss
@@ -1,4 +1,8 @@
 .segment {
-  stroke: black;
+  stroke: var(--text-dark-low-emphasis);
   fill: transparent;
+}
+
+.text {
+  fill: var(--text-dark-contrast);
 }
